<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/play_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/indigo_300"
        android:gravity="center"
        android:text="@string/play_game"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/find_friends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/lime_300"
        android:gravity="center"
        android:text="@string/find_friends"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/brown_300"
        android:gravity="center"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/quit_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_green_300"
        android:gravity="center"
        android:text="@string/quit_game"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:id="@+id/imageview"/>


</LinearLayout>



