<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_300"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/create_Account"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/enter_username"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
             />

        <Button
            android:layout_below="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:id="@+id/btn_logout_from_google"
            android:layout_height="40dp"
            android:text="@string/btn_logout_from_google"
            android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/start_the_game"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>